[tool.poetry]
name = "lextract"
version = "0.0.1"
description = ""
authors = ["Frankie Robertson <frankie@robertson.name>"]
license = "Apache-2.0"
include = ["lextract/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"
click = ">=6.7"
plumbum = "^1.6.6"
pyahocorasick = { git = "https://github.com/frankier/pyahocorasick.git", branch = "stiff-2018-09-20-3", optional = true }
opencc = "^1.1"
finntk = ">=0.0.73"
conllu = "^1.1"
click_log = "^0.3.2"
sqlalchemy_utils = "^0.36.5"
wikiparse = { git = "https://github.com/frankier/wikiparse.git", rev = "68c7d648427d2699bdadaa2acb75ee2bf9158c0e" }
numpy = { version = "^1.19.2", optional = true}
scikit-learn = { version = "^0.23.2", optional = true }
bitarray = { version = "^1.5.3", optional = true }
orjson = "^3.4.3"
seaborn = { version = "^0.11.0", optional = true }
pandas = { version = "^1.1.4", optional = true }

[tool.poetry.extras]
auto = ["pyahocorasick"]
eval = ["scikit-learn", "bitarray", "numpy", "seaborn", "pandas"]

[tool.poetry.dev-dependencies]
flake8 = "^3.5.0"
pre-commit = "^1.10.2"
pytest = "^4.1.1"
mypy = "0.770"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
