[metadata]
description-file = README.md

[flake8]
ignore = E741, W503, E501, E203, E722
max-line-length = 88

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-sqlalchemy.*]
ignore_missing_imports = True

[mypy-boltons.*]
ignore_missing_imports = True

[mypy-conllu.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-wordfreq.*]
ignore_missing_imports = True

[mypy-click_log.*]
ignore_missing_imports = True

[mypy-finntk.*]
ignore_missing_imports = True

[mypy-pyahocorasick.*]
ignore_missing_imports = True

[mypy-ahocorasick.*]
ignore_missing_imports = True

[mypy-plumbum.*]
ignore_missing_imports = True

[mypy-nltk.*]
ignore_missing_imports = True

[mypy-opencc.*]
ignore_missing_imports = True

[mypy-sqlalchemy_utils.*]
ignore_missing_imports = True

[mypy-scipy.*]
ignore_missing_imports = True
